fixed footer spacing problem created full video background test bed.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -265,20 +265,25 @@ ol {
 
 /*footer*/
 
-.footer {
+.site-footer {
     background-color: black;
-    padding: 20px;
+    padding-top: 20px;
     text-align: center;
     color: white;
+    width:auto;
 }
 
 a.footer-links {
     font-size: 1.15em;
+    margin-top: 15px;
+    padding: 10px;
     color: white !important;
 }
 
 .footer-copyright {
     font-size: .9em;
+    margin-top: 20px;
+    padding: 20px;
 }
 
 
